# AtlasSave

./: .gitignore  .prettierrc  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: release.yml
.husky/: pre-commit
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs
src-tauri/src/core/: archiver.rs  debouncer.rs  uploader.rs  watcher.rs
src-tauri/src/utils/: detector.rs
src/components/: Dashboard.tsx  GameProfiles.tsx  Icons.tsx  Onboarding.tsx  Providers.tsx  SaveTree.tsx  Settings.tsx
src/libs/: colors.ts  theme.ts
